--- a/sendmail/templates/staffdeleted.html
+++ b/sendmail/templates/staffdeleted.html
@@ -15,8 +15,8 @@
     <div class="max-w-3xl rounded-lg mx-auto mt-8 mb-8">
 
         <!-- Search form -->
-        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
-
+        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">            
+            {% csrf_token %}
             <div class="relative w-full">
 
                 <!-- Input -->
@@ -42,20 +42,22 @@
     </div>
     
     <!-- Profile Card -->
-    <div class="max-w-3xl mx-auto px-8 mb-32 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
+    <div class="max-w-3xl mx-auto px-8 mb-20 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
 
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
+
+            <!-- Exclamation icon -->
+            <svg class="mx-auto mb-4 w-14 h-14 text-green-600 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
             
             <!-- Name -->
             <h5 class="mb-4 text-3xl text-center font-extrabold text-gray-800 dark:text-white">
-                {{ first_name.title }}
-                {% if middle_name %}
-                    {{ middle_name.title }}
-                    {% else %}
-                        <span></span>
-                {% endif %}
-                {{ last_name.title }}
+                 {{ first_name.title }} 
+                 {{ middle_name.title }} 
+                 {{ last_name.title }}
             </h5>
 
             <!-- Report -->
