--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -15,8 +15,8 @@
     <div class="max-w-3xl rounded-lg mx-auto mt-8 mb-8">
 
         <!-- Search form -->
-        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
-
+        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">            
+            {% csrf_token %}
             <div class="relative w-full">
 
                 <!-- Input -->
@@ -94,10 +94,9 @@
                 <!-- Grade Level -->
                 <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                            stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
                         </svg>
                         {% if staff.level %}
                             <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Grade Level {{ staff.level }}</p>
