--- a/sendmail/templates/updatestaff.html
+++ b/sendmail/templates/updatestaff.html
@@ -13,8 +13,8 @@
     <div class="max-w-3xl rounded-lg mx-auto mt-8">
 
         <!-- Search form -->
-        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
-
+        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">            
+            {% csrf_token %}
             <div class="relative w-full">
 
                 <!-- Input -->
@@ -40,15 +40,15 @@
     </div>  
 
     <!-- Outer Container -->
-    <div class="min-h-full flex items-center justify-center mx-auto mb-20 py-8 sm:px-6 lg:px-8">
+    <div class="max-w-3xl min-h-full flex items-center justify-center mx-auto mb-20 py-8 sm:px-6 md:px-0 lg:px-0">
     
         <!-- Inner Container -->
-        <div class="max-w-3xl w-full bg-white shadow-md rounded-lg px-10 pb-10 py-6">
+        <div class="w-full bg-white shadow-md rounded-lg px-10 pb-10 py-6">
     
             <!-- Form itle -->
             <div class="w-full">
                 <h2 class="mt-4 text-center text-3xl font-extrabold text-gray-900">
-                    <span class="underline underline-offset-2">Update "{{ staff.first_name }}'s" Details</span>
+                    Update: <span class="underline underline-offset-4">{{ staff.first_name }} {{ staff.last_name }}</span>
                 </h2>
             </div>
 
@@ -137,7 +137,7 @@
                     <!-- Profile Picture -->
                     <div>
                         <label for="staff_image" class="block mb-2 text-md font-bold text-gray-500 dark:text-gray-300">{{ form.staff_image.label }}</label>
-                        {% render_field form.staff_image class+="text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
+                        {% render_field form.staff_image class+="cursor-pointer text-md md:text-md font-medium block rounded-md w-full p-3 border border-2 border-gray-300 placeholder-gray-500 text-gray-600 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10" %}                        
                     </div>
                 </div>
                 
