--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -12,7 +12,7 @@
     
         <!-- Search form -->
         <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
-    
+            {% csrf_token %}
             <div class="relative w-full">    
                 <!-- Input -->
                 <input type="text" id="simple-search" name="q" 
@@ -45,54 +45,62 @@
             </h5>
         </div>
     
-        <!-- Staff Details -->
+        <!-- Search Results -->
         <div class="flow-root">
             <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-                {% for staff in searchresult %}
-                    <li class="py-3 sm:py-4">
-        
-                        <!-- Profile -->
-                        <div class="flex items-center space-x-4">
-                            <!-- Profile Picture -->
-                            <div class="flex-shrink-0">
-                                <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
-                                    alt="{{ staff.first_name }}'s' image">
+                {% if searchresult %}
+                    {% for staff in searchresult %}
+                        <li class="py-3 sm:py-4">
+            
+                            <!-- Profile -->
+                            <div class="flex items-center space-x-4">
+                                <!-- Profile Picture -->
+                                <div class="flex-shrink-0">
+                                    <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
+                                        alt="{{ staff.first_name }}'s' image">
+                                </div>
+            
+                                <!-- Name and Email -->
+                                <div class="flex-1 min-w-0">
+                                    <p class="text-lg font-medium text-gray-900 truncate dark:text-white">
+                                        {{ staff.first_name.title }}
+                                        {% if staff.middle_name.title %}
+                                            {{ staff.middle_name.title }}
+                                            {% else %}
+                                                <span></span>
+                                        {% endif %}
+                                        {{ staff.last_name.title }}
+                                    </p>
+                                    <p class="text-lg text-gray-500 truncate dark:text-gray-400">
+                                        {{ staff.email }}
+                                    </p>
+                                </div>
+                                <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
+            
+                                    <!-- View Profile Button -->
+                                    <a href="{% url 'staffdetails' staff.id %}">
+                                        <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+                                                                    text-sm font-medium text-gray-700 bg-white hover:bg-gray-100 focus:outline-none 
+                                                                    focus:ring-2 focus:ring-gray-300 hover:text-gray-900 focus:z-10">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                                stroke-width="2">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                                            </svg>
+                                            View Profile
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
-        
-                            <!-- Name and Email -->
-                            <div class="flex-1 min-w-0">
-                                <p class="text-lg font-medium text-gray-900 truncate dark:text-white">
-                                    {{ staff.first_name.title }}
-                                    {% if staff.middle_name.title %}
-                                        {{ staff.middle_name.title }}
-                                        {% else %}
-                                            <span></span>
-                                    {% endif %}
-                                    {{ staff.last_name.title }}
-                                </p>
-                                <p class="text-lg text-gray-500 truncate dark:text-gray-400">
-                                    {{ staff.email }}
-                                </p>
-                            </div>
-                            <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-        
-                                <!-- View Profile Button -->
-                                <a href="{% url 'staffdetails' staff.id %}">
-                                    <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-                                                                text-sm font-medium text-gray-700 bg-white hover:bg-gray-100 focus:outline-none 
-                                                                focus:ring-2 focus:ring-gray-300 hover:text-gray-900 focus:z-10">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                                            stroke-width="2">
-                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                                        </svg>
-                                        View Profile
-                                    </button>
-                                </a>
-                            </div>
+                        </li>
+                    {% endfor %}
+                    {% else %}
+                        <div class="flex items-center justify-center">
+                            <h5 class="text-2xl font-bold text-gray-900 dark:text-white">
+                                No Record found
+                            </h5>
                         </div>
-                    </li>
-                {% endfor %}
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -102,7 +110,7 @@
         {% if is_paginated %}
             <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
                         space-y-4 items-center justify-center mt-8 mb-8 md:mb-12 pagination">
-                <!-- Help text -->
+                <!-- Page breadcrumbs -->
                 <span class="page-current mx-4">
                     Showing Page <span class="text-gray-600 dark:text-white">{{ page_obj.number }}</span>
                       of <span class="text-gray-600 dark:text-white">{{ page_obj.paginator.num_pages }}</span> Pages
@@ -113,7 +121,7 @@
                     
                     <!-- Prev Button -->
                     {% if page_obj.has_previous %}
-                        <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
+                        <a href="?page={{ page_obj.previous_page_number }}">
                             <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
                                             rounded-l hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 
                                             dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
@@ -128,13 +136,12 @@
                             </button> 
                         </a>                   
                     {% endif %}
-
                     
                     <!-- Next Button -->
                     {% if page_obj.has_next %}
-                        <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">
+                        <a href="?page={{ page_obj.next_page_number }}">
                             <button class="py-2 px-4 text-sm font-medium text-white 
-                                            bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-900 
+                                            bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-600 
                                             dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
                                             dark:hover:text-white">
                                     <span class="inline-flex items-center">
