--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -132,7 +132,7 @@
 	</body>
 	
 	<!-- Footer -->	
-	<footer class="px-4 bg-none pb-4 bottom-0 md:bottom-0 md:px-6 dark:bg-gray-800">		
+	<footer class="px-4 mt-20 bg-none pb-4 bottom-0 md:bottom-0 md:px-6 dark:bg-gray-800">		
 
 		<!-- Horizontal line -->
 		<hr class="my-6 border border-1 border-gray-300 sm:mx-auto dark:border-gray-700 lg:my-8">
@@ -192,7 +192,15 @@
 						</svg>
 					</a>
 				</div>
+				<!-- End of social media icons inner container -->
+				
 			</div>
+			<!-- End of social media icons -->
+
 		</div>
+		<!-- End of Copyright, Address and Social Media container -->
+
 	</footer>
+	<!-- End of footer -->
+
 </html>
