--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -2,52 +2,58 @@
 {% load static %}
 
 {% block title %}
-    <title>{{ title }}</title>
+    <title>Homepage</title>
 {% endblock %}
 
 {% block content %}
 	<!-- Body Container -->
-	<div class="container">
+	<div class="grid place-items-center h-auto">
 
-		<!-- Subheader -->
-		<div class="w-96 md:w-[600px] mt-10 md:mt-20 mx-auto container overflow-visible">
-			<h1 class="text-4xl text-gray-700 font-extrabold text-center">
-				Ministry of Industry, Trade and Cooperatives's Staff Directory
-			</h1>
-		</div>
-	
-		<!-- Search bar -->
-		<div class="max-w-3xl rounded-lg mx-auto">
-	
-			<!-- Search form -->
-			<form action="{% url 'searchresult' %}" class="-mt-32 -mb-32 md:-mt-8 md:-mb-46 lg:-mt-48 lg:-mb-48 min-h-screen flex items-center" method="GET">
+		<div>
 
-				<!-- Input -->
-				<div class="relative w-full">
-					<input type="text" id="simple-search" name="q" 
-								class="bg-white block font-medium border border-4 border-blue-500 text-gray-900 text-lg rounded-lg 
-										focus:ring-blue-500 focus:border-blue-600 block w-full p-4 md:p-6  
-										focus:ring-2 focus:outline-none focus:ring-blue-600
-										dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
-										dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-								placeholder="Search for a staff..."
-						required>
-				</div>
+			<!-- Subheader -->
+			<div class="w-96 md:w-[600px] mt-14 md:mt-20 overflow-visible">
+				<h1 class="text-4xl text-gray-700 font-extrabold text-center">
+					Ministry of Industry, Trade and Cooperatives's Staff Directory
+				</h1>
+			</div>
 	
-				<!-- Submit Query -->
-				<button type="submit" class="px-8 p-4 md:py-6 ml-2 text-lg font-bold text-white bg-blue-700 rounded-lg border
-											border-0 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-0 
-											focus:outline-none focus:ring-blue-300 
-											dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-					<span class="inline-flex items-center">
-						<svg class="w-7 h-7 font-bold" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-							xmlns="http://www.w3.org/2000/svg">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-								d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-						</svg>
-					</span>
-				</button>
-			</form>
+			<!-- Search bar container -->
+			<div class="max-w-3xl rounded-lg mt-20 mb-10 sm:w-full md:w-full">
+		
+				<!-- Search form -->
+				<form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
+
+					<!-- Input -->
+					<div class="relative w-full">
+						<input type="text" id="simple-search" name="q" 
+									class="bg-white block font-medium border border-4 border-blue-600 text-gray-900 text-lg rounded-lg 
+											focus:border-blue-600 block w-full p-4 md:p-6 ring-2 ring-blue-600 
+											focus:ring-4 focus:outline-none focus:ring-blue-600"
+									placeholder="Search for a staff..."
+							required>
+					</div>
+		
+					<!-- Submit Query -->
+					<button type="submit" class="px-8 p-4 md:py-6 ml-2 text-lg font-bold text-white bg-blue-700 rounded-lg border
+												border-0 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-0 
+												focus:outline-none focus:ring-blue-300 
+												dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+						<span class="inline-flex items-center">
+							<svg class="w-7 h-7 font-bold" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+								xmlns="http://www.w3.org/2000/svg">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+									d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+							</svg>
+						</span>
+					</button>
+				</form>
+				<!-- End of Form -->
+			
+			</div>
+			<!-- End of Search bar container -->
 		</div>
-	</div>		
+
+	</div>	
+	<!-- End of body container -->
 {% endblock %}
