--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -217,17 +217,19 @@
                 </button>
 
                 <!-- Modal popup (Remove Staff) -->
-                <div id="modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed md:top-0 top-0 
-                                                    md:mx-auto lg:mx-auto z-50 md:inset-0 h-modal lg:h-full">
-                    <!-- Outer Container -->
-                    <div class="relative p-4 w-full max-w-lg h-full md:h-auto">
+                <div id="modal" tabindex="-1"
+                    class="hidden overflow-y-auto my-auto overflow-x-hidden fixed md:top-0 top-0 grid place-items-center h-screen
+                            md:mx-auto lg:mx-auto sm:mx-auto z-50 inset-0 md:inset-1">
+                    
+                    <!-- Outer Modal Container -->
+                    <div class="relative p-4 w-full max-w-md md:max-w-lg h-full md:h-auto md:mx-auto sm:mx-auto">
                 
-                        <!-- Inner container -->
-                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                        <!-- Inner modal container -->
+                        <div class="relative bg-gray-500 rounded-lg shadow dark:bg-gray-700">
                 
                             <!-- X button -->
                             <button id="closemodal1" type="button" data-modal-toggle="popup-modal"
-                                class="closemodal absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 
+                                class="closemodal absolute top-3 right-2.5 text-white bg-transparent hover:bg-gray-200 hover:text-gray-900 
                                         rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white">
                                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd"
@@ -236,44 +238,65 @@
                                 </svg>
                             </button>
                 
+                            <!-- Exclamation, Warning text annd action buttons -->
                             <div class="p-6 text-center">
                 
                                 <!-- Exclamation icon -->
-                                <svg class="closemodal mx-auto mb-4 w-14 h-14 text-gray-400 dark:text-gray-200" fill="none" stroke="currentColor"
+                                <svg class="closemodal mx-auto mb-4 w-14 h-14 text-white dark:text-gray-200" fill="none" stroke="currentColor"
                                     viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                 </svg>
                 
                                 <!-- Warning text -->
-                                <h3 class="mb-5 text-lg font-normal text-center text-gray-500 dark:text-gray-400">
-                                    Are you sure you want to remove <b>{{ staff.first_name }} {{ staff.last_name }}</b> from the Database?
+                                <h3 class="mb-5 text-lg font-normal text-center text-white dark:text-gray-400">
+                                    Are you sure you want to remove 
+                                    <b>
+                                        {{ staff.first_name }} 
+                                        {% if staff.middle_name %}
+                                            {{ staff.middle_name }}
+                                            {% else %}
+                                                <span></span>
+                                        {% endif %}
+                                        {{ staff.last_name }}
+                                    </b> from the Database?
                                     This action cannot be reversed.
                                 </h3>
                 
-                                <!-- Yes, I'm sure -->
-                                <button type="button">
-                                    <form action="{% url 'removestaff' staff.id %}" method="POST">
-                                        {% csrf_token %}
-                                        <input type="submit" class="cursor-pointer text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none 
-                                                                    focus:ring-red-500 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex 
-                                                                    items-center px-5 py-2.5 text-center mr-2" 
-                                                            value="Yes, Remove">
-                                    </form>
-                                </button>
-                
-                                <!-- No, Cancel button -->
-                                <button id="closemodal2" type="button" data-modal-toggle="popup-modal"
-                                    class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none 
-                                            focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium 
-                                            px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 
-                                            dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">
-                                    No, Cancel
-                                </button>
+                                <!-- Remove and Cancel buttons -->
+                                <div class="flex items-center space-x-3 justify-center mt-8">
+                                    <!-- Yes, Remove -->
+                                    <button type="button">
+                                        <form action="{% url 'removestaff' staff.id %}" method="POST">
+                                            {% csrf_token %}
+                                            <input type="submit" class="cursor-pointer text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:outline-none 
+                                                                        focus:ring-red-400 dark:focus:ring-red-800 font-medium rounded-lg text-md 
+                                                                        items-center px-5 py-2.5 text-center" 
+                                                                value="Yes, Remove">
+                                        </form>
+                                    </button>
+                    
+                                    <!-- No, Cancel button -->
+                                    <button id="closemodal2" type="button" data-modal-toggle="popup-modal"
+                                        class="text-gray-500 text-md bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none 
+                                                focus:ring-gray-300 rounded-lg border font-medium 
+                                                px-5 py-2 hover:text-gray-600 focus:z-10 ">
+                                        No, Cancel
+                                    </button>
+                                </div>
+                                <!-- End of Remove and Cancel buttons -->
+
                             </div>
+                            <!-- End of Exclamation, Warning text annd action buttons -->
+
                         </div>
+                        <!-- End of inner modal container -->
+
                     </div>
+                    <!-- End of outer modal container -->
+
                 </div>
+                <!-- End of Modal -->
 
                 <!-- JavaScript for Modal popup -->
                 <script>
