--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -76,9 +76,9 @@
         
                                 <!-- View Profile Button -->
                                 <a href="{% url 'staffdetails' staff.id %}">
-                                    <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-                                                                text-sm font-medium text-gray-700 bg-white hover:bg-gray-100 focus:outline-none 
-                                                                focus:ring-2 focus:ring-gray-300 hover:text-gray-900 focus:z-10">
+                                    <button type="button" class="inline-flex items-center px-4 py-2 border border-2 border-blue-300 rounded-md shadow-sm 
+                                                                text-sm font-medium text-white bg-blue-300 hover:bg-blue-400 focus:outline-none 
+                                                                hover:border-blue-400 focus:ring-2 focus:ring-offset-2 focus:ring-blue-400 focus:z-10">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                             stroke-width="2">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -99,11 +99,11 @@
     {% block pagination %}
         {% if is_paginated %}
             <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
-                        space-y-4 items-center justify-center mt-8 mb-12 md:mb-12 pagination">
+                        space-y-4 items-center justify-center mt-8 md:mt-8 pagination">
                 <!-- Help text -->
-                <span class="page-current mx-4">
-                    Showing Page <span class="text-gray-600 dark:text-white">{{ page_obj.number }}</span>
-                      of <span class="text-gray-600 dark:text-white">{{ page_obj.paginator.num_pages }}</span> Pages
+                <span class="text-gray-700 page-current mx-4">
+                    Showing Page <span>{{ page_obj.number }}</span>
+                      of <span>{{ page_obj.paginator.num_pages }}</span> Pages
                 </span>
 
                 <!-- Buttons -->
@@ -111,8 +111,8 @@
                     <!-- Previous Button -->
                     {% if page_obj.has_previous %}
                         <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
-                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
-                                            rounded-l hover:bg-gray-600 dark:bg-gray-800 dark:border-gray-700 
+                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-blue-600 
+                                            rounded-l hover:bg-blue-500 dark:bg-gray-800 dark:border-gray-700 
                                             dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                                     <span class="inline-flex items-center">
                                         <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -131,7 +131,7 @@
                     {% if page_obj.has_next %}
                         <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">
                             <button class="py-2 px-4 text-sm font-medium text-white 
-                                            bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-600 
+                                            bg-blue-600 rounded-r border-0 border-l border-blue-600 hover:bg-blue-500 
                                             dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
                                             dark:hover:text-white">
                                     <span class="inline-flex items-center">
