--- a/templates/searchresult.html
+++ b/templates/searchresult.html
@@ -18,7 +18,7 @@
                 <input type="text" id="simple-search" name="q" 
                         class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
                                 border-blue-600 focus:ring-blue-700 focus:border-blue-700 block w-full p-4  
-                                focus:ring-2 focus:outline-none
+                                focus:ring-2 focus:outline-none focus:ring-offset-2
                                 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
                                 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     placeholder="Search for a staff..." required>
@@ -38,7 +38,7 @@
     </div>
     
     <!-- Search Result -->
-    <div class="p-6 lg:p-8 max-w-3xl bg-white rounded-lg md:mb-10 mb-10 border mx-auto shadow-md min-h-full justify-center">
+    <div class="p-6 lg:p-8 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">
                 Found {{ count_query }} result(s) for "{{ query }}"
@@ -79,9 +79,9 @@
             
                                     <!-- View Profile Button -->
                                     <a href="{% url 'staffdetails' staff.id %}">
-                                        <button type="button" class="inline-flex items-center px-4 py-2 border border-blue-400 rounded-md shadow-sm 
-                                                                    text-sm font-medium text-white bg-blue-400 hover:bg-blue-500 focus:outline-none 
-                                                                    focus:ring-2 focus:ring-offset-2 focus:ring-blue-400 hover:border-blue-500 focus:z-10">
+                                        <button type="button" class="inline-flex items-center px-4 py-2 border border-blue-300 rounded-md shadow-sm 
+                                                                    text-sm font-medium text-white bg-blue-300 hover:bg-blue-400 focus:outline-none 
+                                                                    focus:ring-2 focus:ring-offset-2 focus:ring-blue-400 hover:border-blue-400 focus:z-10">
                                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                                 stroke-width="2">
                                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -96,7 +96,7 @@
                     {% endfor %}
                     {% else %}
                         <div class="flex items-center justify-center">
-                            <h5 class="text-2xl font-bold text-gray-900 dark:text-white">
+                            <h5 class="text-2xl font-medium text-gray-900 py-6 dark:text-white">
                                 No Record found
                             </h5>
                         </div>
@@ -109,12 +109,12 @@
     {% block pagination %}
         {% if is_paginated %}
             <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
-                        space-y-4 items-center justify-center mt-8 mb-8 md:mb-12 pagination">
+                        space-y-4 items-center justify-center mt-8 md:mt-8 pagination">
 
                 <!-- Page breadcrumbs -->
-                <span class="page-current">
-                    Showing Page <span class="text-gray-600 dark:text-white">{{ page_obj.number }}</span>
-                      of <span class="text-gray-600 dark:text-white">{{ page_obj.paginator.num_pages }}</span> Pages
+                <span class="page-current text-gray-700">
+                    Showing Page <span>{{ page_obj.number }}</span>
+                      of <span>{{ page_obj.paginator.num_pages }}</span> Pages
                 </span>
 
                 <!-- Buttons -->
@@ -123,8 +123,8 @@
                     <!-- Prev Button -->
                     {% if page_obj.has_previous %}
                         <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
-                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-gray-800 
-                                            rounded-l hover:bg-gray-600 dark:bg-gray-800 dark:border-gray-700 
+                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-blue-600 
+                                            rounded-l hover:bg-blue-500 dark:bg-gray-800 dark:border-gray-700 
                                             dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                                     <span class="inline-flex items-center">
                                         <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -142,7 +142,7 @@
                     {% if page_obj.has_next %}
                         <a href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
                             <button class="py-2 px-4 text-sm font-medium text-white 
-                                            bg-gray-800 rounded-r border-0 border-l border-gray-700 hover:bg-gray-600 
+                                            bg-blue-700 rounded-r border-0 border-l border-blue-600 hover:bg-blue-500 
                                             dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
                                             dark:hover:text-white">
                                     <span class="inline-flex items-center">
